Remove bullets from navigation menu on mobile and fix centering

--- a/prodekoorg/static/scss/navbar.scss
+++ b/prodekoorg/static/scss/navbar.scss
@@ -38,6 +38,12 @@
         }
     }
 
+    .navigation-list {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+    }
+
     .nav-link {
         font-size: 1.5em;
     }
